質問式のプロトタイプ

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "array-move": "https://aistudiocdn.com/array-move@^4.0.0",
-    "react-sortable-hoc": "https://aistudiocdn.com/react-sortable-hoc@^2.0.0"
+    "array-move": "https://aistudiocdn.com/array-move@^4.0.0"
   }
 }
 </script>
